--- a/README
+++ b/README
@@ -4,8 +4,10 @@ https://nl.wikipedia.org/wiki/Bouman_GGZ
 
 https://nl.wikipedia.org/wiki/Slavernij
 
+https://en.wikipedia.org/wiki/Merkle_tree
+
 https://nl.wikipedia.org/wiki/Prinsenland
 
 https://en.wikipedia.org/wiki/Chain_Gang_(song)
 
-doktor robin in aktion
+doktor robin in aktion ® 2002-2022
