--- a/README
+++ b/README
@@ -1,6 +1,6 @@
------------------
-| brainplantage |
------------------
+---------------
+| de-plantage |
+---------------
 
 https://nl.wikipedia.org/wiki/Bouman_GGZ
 
