--- a/README
+++ b/README
@@ -2,14 +2,20 @@
 | de-plantage |
 ---------------
 
+
+# bouman ggz
 https://nl.wikipedia.org/wiki/Bouman_GGZ
 
+# slavernij
 https://nl.wikipedia.org/wiki/Slavernij
 
+# merkle tree
 https://en.wikipedia.org/wiki/Merkle_tree
 
+# bioterrorism
 https://en.wikipedia.org/wiki/Bioterrorism
 
+# prinsenland
 https://nl.wikipedia.org/wiki/Prinsenland
 
 doktor robin in aktion ® 2002-2022
